--- a/_includes/script.html
+++ b/_includes/script.html
@@ -6,7 +6,7 @@
 <!-- 点击页面文字冒出特效 -->
 <script>
 ;(function(){
-  var textArr = ['离谱', '属实离谱', '什么玩意']
+  var textArr = ['离谱', '属实离谱', '什么玩意', '笋被你夺完了', '离离原上谱', '啸死我了', '很生草']
   window.blog.initClickEffect(textArr)
 })()
 </script>
